sfc: Removed adhoc scheme to rate limit PTP event queue overflow message (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16139,6 +16139,7 @@
 	patches.drivers/sfc-0210-sfc-Fix-transposed-ptp_-under-over-size_sync_windows.patch
 	patches.drivers/sfc-0211-sfc-Use-the-correct-maximum-TX-DMA-ring-size-for-SFC.patch
 	patches.drivers/sfc-0212-drivers-net-fix-build-warning-in-ethernet-sfc-tx.c.patch
+	patches.drivers/sfc-0213-sfc-Removed-adhoc-scheme-to-rate-limit-PTP-event-que.patch
 
 	########################################################
 	# Wireless Networking
