--- a/series.conf
+++ b/series.conf
@@ -15958,6 +15958,7 @@
 	patches.drivers/sfc-0029-sfc-Fix-Kconfig-typo-help.patch
 	patches.drivers/sfc-0030-sfc-fix-return-value-check-in-efx_ptp_probe_channel.patch
 	patches.drivers/sfc-0031-sfc-Delete-EFX_PAGE_IP_ALIGN-equivalent-to-NET_IP_AL.patch
+	patches.drivers/sfc-0032-sfc-Reduce-RX-scatter-buffer-size-and-reduce-alignme.patch
 
 	########################################################
 	# Wireless Networking
