sfc: Fold efx_flush_all() into efx_stop_port() and update comments (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16102,6 +16102,7 @@
 	patches.drivers/sfc-0173-sfc-Add-new-sensor-names.patch
 	patches.drivers/sfc-0174-sfc-Log-all-unexpected-MCDI-errors.patch
 	patches.drivers/sfc-0175-sfc-Map-MCDI-error-MC_CMD_ERR_ENOTSUP-to-Linux-EOPNO.patch
+	patches.drivers/sfc-0176-sfc-Fold-efx_flush_all-into-efx_stop_port-and-update.patch
 
 	########################################################
 	# Wireless Networking
