--- a/series.conf
+++ b/series.conf
@@ -15928,6 +15928,7 @@
 
 	# sfc SP4 update (bsc#909618 FATE#317521)
 	patches.drivers/sfc-0001-drivers-net-ethernet-sfc-use-standard-__-clear-set-_.patch
+	patches.drivers/sfc-0002-sfc-remove-__dev-attributes.patch
 
 	########################################################
 	# Wireless Networking
