--- a/series.conf
+++ b/series.conf
@@ -16027,6 +16027,7 @@
 	patches.drivers/sfc-0098-sfc-PTP-MCDI-requests-need-to-initialise-periph-ID-f.patch
 	patches.drivers/sfc-0099-sfc-Add-a-function-pointer-to-abstract-write-of-host.patch
 	patches.drivers/sfc-0100-sfc-Add-EF10-support-for-TX-RX-DMA-error-events-hand.patch
+	patches.drivers/sfc-0101-sfc-use-MCDI-epoch-flag-to-improve-MC-reboot-detecti.patch
 
 	########################################################
 	# Wireless Networking
