sfc: Add support for new board sensors (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16034,6 +16034,7 @@
 	patches.drivers/sfc-0105-sfc-Add-support-for-reading-packet-length-from-prefi.patch
 	patches.drivers/sfc-0106-sfc-Return-an-error-code-when-a-sensor-is-busy.patch
 	patches.drivers/sfc-0107-sfc-Use-extended-MC_CMD_SENSOR_INFO-and-MC_CMD_READ_.patch
+	patches.drivers/sfc-0108-sfc-Add-support-for-new-board-sensors.patch
 
 	########################################################
 	# Wireless Networking
