sfc: Implement the SIOCGHWTSTAMP ioctl (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16080,6 +16080,7 @@
 	patches.drivers/sfc-0151-sfc-Add-PM-and-RXDP-drop-counters-to-ethtool-stats.patch
 	patches.drivers/sfc-0152-sfc-Only-bind-to-EF10-functions-with-the-LinkCtrl-an.patch
 	patches.drivers/sfc-0153-sfc-Fix-DMA-unmapping-issue-with-firmware-assisted-T.patch
+	patches.drivers/sfc-0154-sfc-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 
 	########################################################
 	# Wireless Networking
