sfc: Make RX queue descriptor counts unsigned for consistency (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15942,6 +15942,7 @@
 	patches.drivers/sfc-0013-sfc-Add-AER-and-EEH-support-for-Siena.patch
 	patches.drivers/sfc-0014-sfc-Document-current-usage-of-efx_rx_buffer-len-and-.patch
 	patches.drivers/sfc-0015-sfc-Properly-distinguish-RX-buffer-and-DMA-lengths.patch
+	patches.drivers/sfc-0016-sfc-Make-RX-queue-descriptor-counts-unsigned-for-con.patch
 
 	########################################################
 	# Wireless Networking
