sfc: Don't use efx_filter_{build,hash,increment}() for default MAC filters (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15935,6 +15935,7 @@
 	patches.drivers/sfc-0006-sfc-Remove-rx_alloc_method-SKB.patch
 	patches.drivers/sfc-0007-sfc-More-sensible-semantics-for-efx_filter_insert_fi.patch
 	patches.drivers/sfc-0008-sfc-Remove-redundant-parameter-to-efx_filter_search.patch
+	patches.drivers/sfc-0009-sfc-Don-t-use-efx_filter_-build-hash-increment-for-d.patch
 
 	########################################################
 	# Wireless Networking
