sfc: Fix IRQ cleanup in case of a probe failure (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15968,6 +15968,7 @@
 	patches.drivers/sfc-0039-sfc-Enable-accelerated-RFS-on-vlans.patch
 	patches.drivers/sfc-0040-sfc-Define-and-set-RX-buffer-flag-for-packets-parsed.patch
 	patches.drivers/sfc-0041-sfc-Do-not-pass-non-TCP-packets-into-GRO-code.patch
+	patches.drivers/sfc-0042-sfc-Fix-IRQ-cleanup-in-case-of-a-probe-failure.patch
 
 	########################################################
 	# Wireless Networking
