--- a/series.conf
+++ b/series.conf
@@ -16092,6 +16092,7 @@
 	patches.drivers/sfc-0163-sfc-Poll-for-MCDI-completion-once-before-timeout-occ.patch
 	patches.drivers/sfc-0164-sfc-Demote-MC-Scheduler-error-messages.patch
 	patches.drivers/sfc-0165-sfc-Update-MCDI-protocol-definitions.patch
+	patches.drivers/sfc-0166-net-sfc-remove-unnecessary-pci_set_drvdata.patch
 
 	########################################################
 	# Wireless Networking
