--- a/series.conf
+++ b/series.conf
@@ -16158,6 +16158,7 @@
 	patches.drivers/sfc-0229-sfc-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/sfc-0230-Call-efx_set_channels-before-efx-type-dimension_reso.patch
 	patches.drivers/sfc-0231-sfc-On-MCDI-timeout-issue-an-FLR-and-mark-MCDI-to-fa.patch
+	patches.drivers/sfc-0232-sfc-fix-calling-of-free_irq-with-already-free-vector.patch
 
 	########################################################
 	# Wireless Networking
