sfc: Introduce and use MCDI_CTL_SDU_LEN_MAX_V1 macro for Siena-specific code (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15979,6 +15979,7 @@
 	patches.drivers/sfc-0050-sfc-Introduce-and-use-MCDI_DECLARE_BUF-macro.patch
 	patches.drivers/sfc-0051-sfc-Rationalise-MCDI-buffer-accessors.patch
 	patches.drivers/sfc-0052-sfc-Fill-out-the-set-of-MCDI-accessors.patch
+	patches.drivers/sfc-0053-sfc-Introduce-and-use-MCDI_CTL_SDU_LEN_MAX_V1-macro-.patch
 
 	########################################################
 	# Wireless Networking
