sfc: remove unused 'enum efx_rx_alloc_method' (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16129,6 +16129,7 @@
 	patches.drivers/sfc-0200-sfc-Allow-filter-removal-only-with-exactly-matching-.patch
 	patches.drivers/sfc-0201-sfc-Implement-efx_nic_type-filter_clear_rx-operation.patch
 	patches.drivers/sfc-0202-sfc-remove-unused-refcnt-from-efx_rx_page_state.patch
+	patches.drivers/sfc-0203-sfc-remove-unused-enum-efx_rx_alloc_method.patch
 
 	########################################################
 	# Wireless Networking
