sfc: Implement asynchronous MCDI requests (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16037,6 +16037,7 @@
 	patches.drivers/sfc-0108-sfc-Add-support-for-new-board-sensors.patch
 	patches.drivers/sfc-0109-sfc-Refactor-efx_mcdi_rpc_start-and-efx_mcdi_copyin.patch
 	patches.drivers/sfc-0110-sfc-Remove-unnecessary-use-of-atomic_t.patch
+	patches.drivers/sfc-0111-sfc-Implement-asynchronous-MCDI-requests.patch
 
 	########################################################
 	# Wireless Networking
