--- a/series.conf
+++ b/series.conf
@@ -16053,6 +16053,7 @@
 	patches.drivers/sfc-0124-sfc-Add-support-for-Solarflare-SFC9100-family.patch
 	patches.drivers/sfc-0125-sfc-Update-copyright-banners.patch
 	patches.drivers/sfc-0126-drivers-net-Convert-dma_alloc_coherent-.__GFP_ZERO-t.patch
+	patches.drivers/sfc-0127-sfc-check-for-allocation-failure.patch
 
 	########################################################
 	# Wireless Networking
