sfc: Add EF10 support for TX/RX DMA error events handling (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16026,6 +16026,7 @@
 	patches.drivers/sfc-0097-sfc-Delegate-MAC-NIC-statistic-description-to-efx_ni.patch
 	patches.drivers/sfc-0098-sfc-PTP-MCDI-requests-need-to-initialise-periph-ID-f.patch
 	patches.drivers/sfc-0099-sfc-Add-a-function-pointer-to-abstract-write-of-host.patch
+	patches.drivers/sfc-0100-sfc-Add-EF10-support-for-TX-RX-DMA-error-events-hand.patch
 
 	########################################################
 	# Wireless Networking
