sfc: Get rid of per-NIC-type phys_addr_channels and mem_map_size (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16003,6 +16003,7 @@
 	patches.drivers/sfc-0074-sfc-Add-support-for-MCDI-v2.patch
 	patches.drivers/sfc-0075-sfc-Fix-race-in-completion-handling.patch
 	patches.drivers/sfc-0076-sfc-Update-and-improve-kernel-doc-for-efx_mcdi_state.patch
+	patches.drivers/sfc-0077-sfc-Get-rid-of-per-NIC-type-phys_addr_channels-and-m.patch
 
 	########################################################
 	# Wireless Networking
