--- a/series.conf
+++ b/series.conf
@@ -16025,6 +16025,7 @@
 	patches.drivers/sfc-0096-sfc-Remove-driver-local-struct-ethtool_string.patch
 	patches.drivers/sfc-0097-sfc-Delegate-MAC-NIC-statistic-description-to-efx_ni.patch
 	patches.drivers/sfc-0098-sfc-PTP-MCDI-requests-need-to-initialise-periph-ID-f.patch
+	patches.drivers/sfc-0099-sfc-Add-a-function-pointer-to-abstract-write-of-host.patch
 
 	########################################################
 	# Wireless Networking
