sfc: Remove unused filter_flags variables and efx_farch_filter_id_flags() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16006,6 +16006,7 @@
 	patches.drivers/sfc-0077-sfc-Get-rid-of-per-NIC-type-phys_addr_channels-and-m.patch
 	patches.drivers/sfc-0078-sfc-EFX_WORKAROUND_ALWAYS-is-really-specific-to-Falc.patch
 	patches.drivers/sfc-0079-sfc-Do-not-assume-efx_nic_type-ev_fini-is-idempotent.patch
+	patches.drivers/sfc-0080-sfc-Remove-unused-filter_flags-variables-and-efx_far.patch
 
 	########################################################
 	# Wireless Networking
