sfc: Fill out the set of MCDI accessors (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15978,6 +15978,7 @@
 	patches.drivers/sfc-0049-sfc-Move-more-Falcon-specific-code-and-definitions-i.patch
 	patches.drivers/sfc-0050-sfc-Introduce-and-use-MCDI_DECLARE_BUF-macro.patch
 	patches.drivers/sfc-0051-sfc-Rationalise-MCDI-buffer-accessors.patch
+	patches.drivers/sfc-0052-sfc-Fill-out-the-set-of-MCDI-accessors.patch
 
 	########################################################
 	# Wireless Networking
