sfc: Add rmb() between reading stats and generation count to ensure consistency (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16073,6 +16073,7 @@
 	patches.drivers/sfc-0144-sfc-Support-ARFS-for-IPv6-flows.patch
 	patches.drivers/sfc-0145-DMA-API-net-sfc-efx.c-replace-dma_set_mask-dma_set_c.patch
 	patches.drivers/sfc-0146-sfc-Remove-extern-from-function-prototypes.patch
+	patches.drivers/sfc-0147-sfc-Add-rmb-between-reading-stats-and-generation-cou.patch
 
 	########################################################
 	# Wireless Networking
