sfc: Clean up validation of datapath capabilities (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16057,6 +16057,7 @@
 	patches.drivers/sfc-0128-sfc-Minimal-support-for-40G-link-speed.patch
 	patches.drivers/sfc-0129-sfc-Disable-PTP-on-EF10-until-we-re-ready-to-handle-.patch
 	patches.drivers/sfc-0130-sfc-Reset-derived-rx_bad_bytes-statistic-when-EF10-M.patch
+	patches.drivers/sfc-0131-sfc-Clean-up-validation-of-datapath-capabilities.patch
 
 	########################################################
 	# Wireless Networking
