--- a/series.conf
+++ b/series.conf
@@ -16033,6 +16033,7 @@
 	patches.drivers/sfc-0104-sfc-Generalise-packet-hash-lookup-to-support-EF10-RX.patch
 	patches.drivers/sfc-0105-sfc-Add-support-for-reading-packet-length-from-prefi.patch
 	patches.drivers/sfc-0106-sfc-Return-an-error-code-when-a-sensor-is-busy.patch
+	patches.drivers/sfc-0107-sfc-Use-extended-MC_CMD_SENSOR_INFO-and-MC_CMD_READ_.patch
 
 	########################################################
 	# Wireless Networking
