--- a/series.conf
+++ b/series.conf
@@ -16148,6 +16148,7 @@
 	patches.drivers/sfc-0219-sfc-Preserve-rx_frm_trunc-counters-when-resizing-DMA.patch
 	patches.drivers/sfc-0220-sfc-Rename-use_options-variable-in-tso_start-to-clea.patch
 	patches.drivers/sfc-0221-sfc-Use-canonical-pointer-type-for-MAC-address-in-ef.patch
+	patches.drivers/sfc-0222-sfc-Update-product-naming.patch
 
 	########################################################
 	# Wireless Networking
