--- a/series.conf
+++ b/series.conf
@@ -16002,6 +16002,7 @@
 	patches.drivers/sfc-0073-sfc-Update-MCDI-protocol-definitions-for-EF10.patch
 	patches.drivers/sfc-0074-sfc-Add-support-for-MCDI-v2.patch
 	patches.drivers/sfc-0075-sfc-Fix-race-in-completion-handling.patch
+	patches.drivers/sfc-0076-sfc-Update-and-improve-kernel-doc-for-efx_mcdi_state.patch
 
 	########################################################
 	# Wireless Networking
