sfc: Add definitions for new stats counters and capability flag (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16076,6 +16076,7 @@
 	patches.drivers/sfc-0147-sfc-Add-rmb-between-reading-stats-and-generation-cou.patch
 	patches.drivers/sfc-0148-sfc-Fix-internal-indices-of-ethtool-stats-for-EF10.patch
 	patches.drivers/sfc-0149-sfc-Refactor-EF10-stat-mask-code-to-allow-for-more-c.patch
+	patches.drivers/sfc-0150-sfc-Add-definitions-for-new-stats-counters-and-capab.patch
 
 	########################################################
 	# Wireless Networking
