sfc: Demote "MC Scheduler error" messages (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16090,6 +16090,7 @@
 	patches.drivers/sfc-0161-sfc-RX-buffer-allocation-takes-prefix-size-into-acco.patch
 	patches.drivers/sfc-0162-sfc-Refactor-efx_mcdi_poll-by-introducing-efx_mcdi_p.patch
 	patches.drivers/sfc-0163-sfc-Poll-for-MCDI-completion-once-before-timeout-occ.patch
+	patches.drivers/sfc-0164-sfc-Demote-MC-Scheduler-error-messages.patch
 
 	########################################################
 	# Wireless Networking
