--- a/series.conf
+++ b/series.conf
@@ -16093,6 +16093,7 @@
 	patches.drivers/sfc-0164-sfc-Demote-MC-Scheduler-error-messages.patch
 	patches.drivers/sfc-0165-sfc-Update-MCDI-protocol-definitions.patch
 	patches.drivers/sfc-0166-net-sfc-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/sfc-0167-sfc-Add-MC-BISTs-to-ethtool-offline-self-test-on-EF1.patch
 
 	########################################################
 	# Wireless Networking
