sfc: Rename 'use_options' variable in tso_start() to clearer 'use_opt_desc' (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16146,6 +16146,7 @@
 	patches.drivers/sfc-0217-sfc-Remove-unused-definitions-of-EF10-user-mode-DMA-.patch
 	patches.drivers/sfc-0218-sfc-Correct-comment-about-number-of-TX-queues-used-o.patch
 	patches.drivers/sfc-0219-sfc-Preserve-rx_frm_trunc-counters-when-resizing-DMA.patch
+	patches.drivers/sfc-0220-sfc-Rename-use_options-variable-in-tso_start-to-clea.patch
 
 	########################################################
 	# Wireless Networking
