--- a/series.conf
+++ b/series.conf
@@ -16151,6 +16151,7 @@
 	patches.drivers/sfc-0222-sfc-Update-product-naming.patch
 	patches.drivers/sfc-0223-sfc-Cosmetic-changes-to-self-test-from-the-out-of-tr.patch
 	patches.drivers/sfc-0224-sfc-Fail-self-test-with-EBUSY-not-EIO-if-the-device-.patch
+	patches.drivers/sfc-0225-sfc-Add-remove-blank-lines-to-taste.patch
 
 	########################################################
 	# Wireless Networking
