sfc: Disable PTP on EF10 until we're ready to handle inline RX timestamps (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16055,6 +16055,7 @@
 	patches.drivers/sfc-0126-drivers-net-Convert-dma_alloc_coherent-.__GFP_ZERO-t.patch
 	patches.drivers/sfc-0127-sfc-check-for-allocation-failure.patch
 	patches.drivers/sfc-0128-sfc-Minimal-support-for-40G-link-speed.patch
+	patches.drivers/sfc-0129-sfc-Disable-PTP-on-EF10-until-we-re-ready-to-handle-.patch
 
 	########################################################
 	# Wireless Networking
