--- a/series.conf
+++ b/series.conf
@@ -15974,6 +15974,7 @@
 	patches.drivers/sfc-0045-sfc-Fix-lookup-of-default-RX-MAC-filters-when-steere.patch
 	patches.drivers/sfc-0046-sfc-const-qualify-source-pointers-for-MMIO-write-fun.patch
 	patches.drivers/sfc-0047-sfc-Use-efx_mcdi_mon-to-find-efx_mcdi_mon-structure-.patch
+	patches.drivers/sfc-0048-sfc-Move-details-of-a-Falcon-bug-workaround-out-of-e.patch
 
 	########################################################
 	# Wireless Networking
