sfc: Replace TSOH_OFFSET with the equivalent NET_IP_ALIGN (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16142,6 +16142,7 @@
 	patches.drivers/sfc-0213-sfc-Removed-adhoc-scheme-to-rate-limit-PTP-event-que.patch
 	patches.drivers/sfc-0214-sfc-Cache-skb-data-in-local-variable-in-efx_ptp_rx.patch
 	patches.drivers/sfc-0215-sfc-Rewrite-adjustment-of-PPS-event-in-a-clearer-way.patch
+	patches.drivers/sfc-0216-sfc-Replace-TSOH_OFFSET-with-the-equivalent-NET_IP_A.patch
 
 	########################################################
 	# Wireless Networking
