sfc: Allow filter removal only with exactly matching priority (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16126,6 +16126,7 @@
 	patches.drivers/sfc-0197-sfc-Change-efx_nic_type-rx_push_indir_table-to-push-.patch
 	patches.drivers/sfc-0198-sfc-Change-priority-and-flags-for-automatic-MAC-filt.patch
 	patches.drivers/sfc-0199-sfc-Don-t-refer-to-stack-in-filter-implementation.patch
+	patches.drivers/sfc-0200-sfc-Allow-filter-removal-only-with-exactly-matching-.patch
 
 	########################################################
 	# Wireless Networking
