--- a/series.conf
+++ b/series.conf
@@ -16113,6 +16113,7 @@
 	patches.drivers/sfc-0184-sfc-Remove-kernel-doc-for-efx_ptp_data-fields-not-pr.patch
 	patches.drivers/sfc-0185-sfc-PTP-tidy-up-unused-useless-variables.patch
 	patches.drivers/sfc-0186-sfc-Tidy-up-PTP-synchronization-code.patch
+	patches.drivers/sfc-0187-sfc-Add-support-for-SFC9100-timestamp-format.patch
 
 	########################################################
 	# Wireless Networking
