sfc: efx_ethtool_get_ts_info() can be static (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16061,6 +16061,7 @@
 	patches.drivers/sfc-0132-sfc-Reinitialise-and-re-validate-datapath-caps-after.patch
 	patches.drivers/sfc-0133-sfc-Wait-for-MC-reboot-to-complete-before-scheduling.patch
 	patches.drivers/sfc-0134-sfc-Increase-MCDI-status-timeout-to-250ms.patch
+	patches.drivers/sfc-0135-sfc-efx_ethtool_get_ts_info-can-be-static.patch
 
 	########################################################
 	# Wireless Networking
