sfc: make local functions static (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15954,6 +15954,7 @@
 	patches.drivers/sfc-0025-sfc-allocate-more-RX-buffers-per-page.patch
 	patches.drivers/sfc-0026-sfc-remove-duplicated-include-from-efx.c.patch
 	patches.drivers/sfc-0027-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
+	patches.drivers/sfc-0028-sfc-make-local-functions-static.patch
 
 	########################################################
 	# Wireless Networking
