sfc: Store flags from MC_CMD_DRV_ATTACH for later use (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16107,6 +16107,7 @@
 	patches.drivers/sfc-0178-sfc-Return-EBUSY-for-filter-insertion-on-EF10-matchi.patch
 	patches.drivers/sfc-0179-sfc-Split-PTP-multicast-filter-insertion-removal-out.patch
 	patches.drivers/sfc-0180-sfc-Remove-dependency-of-PTP-on-having-a-dedicated-c.patch
+	patches.drivers/sfc-0181-sfc-Store-flags-from-MC_CMD_DRV_ATTACH-for-later-use.patch
 
 	########################################################
 	# Wireless Networking
