--- a/series.conf
+++ b/series.conf
@@ -16031,6 +16031,7 @@
 	patches.drivers/sfc-0102-sfc-Remove-early-call-to-efx_nic_type-reconfigure_ma.patch
 	patches.drivers/sfc-0103-sfc-Rename-EFX_PAGE_BLOCK_SIZE-to-EFX_VI_PAGE_SIZE-a.patch
 	patches.drivers/sfc-0104-sfc-Generalise-packet-hash-lookup-to-support-EF10-RX.patch
+	patches.drivers/sfc-0105-sfc-Add-support-for-reading-packet-length-from-prefi.patch
 
 	########################################################
 	# Wireless Networking
