--- a/series.conf
+++ b/series.conf
@@ -15969,6 +15969,7 @@
 	patches.drivers/sfc-0040-sfc-Define-and-set-RX-buffer-flag-for-packets-parsed.patch
 	patches.drivers/sfc-0041-sfc-Do-not-pass-non-TCP-packets-into-GRO-code.patch
 	patches.drivers/sfc-0042-sfc-Fix-IRQ-cleanup-in-case-of-a-probe-failure.patch
+	patches.drivers/sfc-0043-sfc-Fix-memory-leak-when-discarding-scattered-packet.patch
 
 	########################################################
 	# Wireless Networking
