sfc:On MCDI timeout, issue an FLR (and mark MCDI to fail-fast) (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16157,6 +16157,7 @@
 	patches.drivers/sfc-0228-sfc-Use-ether_addr_copy-and-eth_broadcast_addr.patch
 	patches.drivers/sfc-0229-sfc-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/sfc-0230-Call-efx_set_channels-before-efx-type-dimension_reso.patch
+	patches.drivers/sfc-0231-sfc-On-MCDI-timeout-issue-an-FLR-and-mark-MCDI-to-fa.patch
 
 	########################################################
 	# Wireless Networking
