sfc: Add support for MCDI v2 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16000,6 +16000,7 @@
 	patches.drivers/sfc-0071-sfc-Move-and-rename-Falcon-Siena-common-NIC-operatio.patch
 	patches.drivers/sfc-0072-sfc-Translate-MCDI-error-numbers-received-in-events.patch
 	patches.drivers/sfc-0073-sfc-Update-MCDI-protocol-definitions-for-EF10.patch
+	patches.drivers/sfc-0074-sfc-Add-support-for-MCDI-v2.patch
 
 	########################################################
 	# Wireless Networking
