sfc: Make struct efx_special_buffer less special (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15989,6 +15989,7 @@
 	patches.drivers/sfc-0060-sfc-Make-efx_mcdi_init-call-efx_mcdi_handle_assertio.patch
 	patches.drivers/sfc-0061-sfc-Make-MCDI-independent-of-Siena.patch
 	patches.drivers/sfc-0062-sfc-Add-GFP-flags-to-efx_nic_alloc_buffer-and-make-m.patch
+	patches.drivers/sfc-0063-sfc-Make-struct-efx_special_buffer-less-special.patch
 
 	########################################################
 	# Wireless Networking
