sfc: Fix RX drop filters for EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16132,6 +16132,7 @@
 	patches.drivers/sfc-0203-sfc-remove-unused-enum-efx_rx_alloc_method.patch
 	patches.drivers/sfc-0204-sfc-Changed-the-statistic-name-emerg_-fetch-wait-to-.patch
 	patches.drivers/sfc-0205-sfc-Add-PTP-counters-to-ethtool-stats.patch
+	patches.drivers/sfc-0206-sfc-Fix-RX-drop-filters-for-EF10.patch
 
 	########################################################
 	# Wireless Networking
