--- a/series.conf
+++ b/series.conf
@@ -16019,6 +16019,7 @@
 	patches.drivers/sfc-0090-sfc-Cleanup-Falcon-arch-simple-MAC-filter-state.patch
 	patches.drivers/sfc-0091-sfc-Rename-SPI-stuff-to-show-that-it-is-Falcon-speci.patch
 	patches.drivers/sfc-0092-sfc-Eliminate-struct-efx_mtd.patch
+	patches.drivers/sfc-0093-sfc-Move-NIC-type-specific-MTD-partition-date-into-s.patch
 
 	########################################################
 	# Wireless Networking
