--- a/series.conf
+++ b/series.conf
@@ -16110,6 +16110,7 @@
 	patches.drivers/sfc-0181-sfc-Store-flags-from-MC_CMD_DRV_ATTACH-for-later-use.patch
 	patches.drivers/sfc-0182-sfc-Do-not-use-MAC-address-as-clock-name.patch
 	patches.drivers/sfc-0183-sfc-Initialise-efx_ptp_data-phc_clock_info-from-a-st.patch
+	patches.drivers/sfc-0184-sfc-Remove-kernel-doc-for-efx_ptp_data-fields-not-pr.patch
 
 	########################################################
 	# Wireless Networking
