sfc: More sensible semantics for efx_filter_insert_filter() replace flag (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15933,6 +15933,7 @@
 	patches.drivers/sfc-0004-sfc-PTP-changes-to-support-improved-UUID-filtering-m.patch
 	patches.drivers/sfc-0005-sfc-tidy-up-PTP-synchronize-function-efx_ptp_process.patch
 	patches.drivers/sfc-0006-sfc-Remove-rx_alloc_method-SKB.patch
+	patches.drivers/sfc-0007-sfc-More-sensible-semantics-for-efx_filter_insert_fi.patch
 
 	########################################################
 	# Wireless Networking
