sfc: Poll for MCDI completion once before timeout occurs (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16089,6 +16089,7 @@
 	patches.drivers/sfc-0160-sfc-Maintain-current-frequency-adjustment-when-apply.patch
 	patches.drivers/sfc-0161-sfc-RX-buffer-allocation-takes-prefix-size-into-acco.patch
 	patches.drivers/sfc-0162-sfc-Refactor-efx_mcdi_poll-by-introducing-efx_mcdi_p.patch
+	patches.drivers/sfc-0163-sfc-Poll-for-MCDI-completion-once-before-timeout-occ.patch
 
 	########################################################
 	# Wireless Networking
