sfc: Remove more left-overs from Falcon GMAC support (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16021,6 +16021,7 @@
 	patches.drivers/sfc-0092-sfc-Eliminate-struct-efx_mtd.patch
 	patches.drivers/sfc-0093-sfc-Move-NIC-type-specific-MTD-partition-date-into-s.patch
 	patches.drivers/sfc-0094-sfc-Move-MTD-operations-into-efx_nic_type.patch
+	patches.drivers/sfc-0095-sfc-Remove-more-left-overs-from-Falcon-GMAC-support.patch
 
 	########################################################
 	# Wireless Networking
