--- a/series.conf
+++ b/series.conf
@@ -16079,6 +16079,7 @@
 	patches.drivers/sfc-0150-sfc-Add-definitions-for-new-stats-counters-and-capab.patch
 	patches.drivers/sfc-0151-sfc-Add-PM-and-RXDP-drop-counters-to-ethtool-stats.patch
 	patches.drivers/sfc-0152-sfc-Only-bind-to-EF10-functions-with-the-LinkCtrl-an.patch
+	patches.drivers/sfc-0153-sfc-Fix-DMA-unmapping-issue-with-firmware-assisted-T.patch
 
 	########################################################
 	# Wireless Networking
