sfc: Add PTP counters to ethtool stats (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16131,6 +16131,7 @@
 	patches.drivers/sfc-0202-sfc-remove-unused-refcnt-from-efx_rx_page_state.patch
 	patches.drivers/sfc-0203-sfc-remove-unused-enum-efx_rx_alloc_method.patch
 	patches.drivers/sfc-0204-sfc-Changed-the-statistic-name-emerg_-fetch-wait-to-.patch
+	patches.drivers/sfc-0205-sfc-Add-PTP-counters-to-ethtool-stats.patch
 
 	########################################################
 	# Wireless Networking
