sfc: Minimal support for 40G link speed (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16054,6 +16054,7 @@
 	patches.drivers/sfc-0125-sfc-Update-copyright-banners.patch
 	patches.drivers/sfc-0126-drivers-net-Convert-dma_alloc_coherent-.__GFP_ZERO-t.patch
 	patches.drivers/sfc-0127-sfc-check-for-allocation-failure.patch
+	patches.drivers/sfc-0128-sfc-Minimal-support-for-40G-link-speed.patch
 
 	########################################################
 	# Wireless Networking
