sfc: Report software timestamping capabilities (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15964,6 +15964,7 @@
 	patches.drivers/sfc-0035-sfc-Fix-EEH-with-legacy-interrupts.patch
 	patches.drivers/sfc-0036-sfc-Enable-RX-checksum-offload-for-packets-not-handl.patch
 	patches.drivers/sfc-0037-sfc-Increase-size-of-RX-SKB-header-area.patch
+	patches.drivers/sfc-0038-sfc-Report-software-timestamping-capabilities.patch
 
 	########################################################
 	# Wireless Networking
