--- a/series.conf
+++ b/series.conf
@@ -15994,6 +15994,7 @@
 	patches.drivers/sfc-0065-sfc-Remove-efx_process_channel_now.patch
 	patches.drivers/sfc-0066-sfc-Rework-IRQ-enable-disable.patch
 	patches.drivers/sfc-0067-sfc-Limit-scope-of-a-Falcon-A1-IRQ-workaround.patch
+	patches.drivers/sfc-0068-sfc-Stop-RX-refill-before-flushing-RX-queues.patch
 
 	########################################################
 	# Wireless Networking
