sfc: Update MCDI protocol definitions (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16091,6 +16091,7 @@
 	patches.drivers/sfc-0162-sfc-Refactor-efx_mcdi_poll-by-introducing-efx_mcdi_p.patch
 	patches.drivers/sfc-0163-sfc-Poll-for-MCDI-completion-once-before-timeout-occ.patch
 	patches.drivers/sfc-0164-sfc-Demote-MC-Scheduler-error-messages.patch
+	patches.drivers/sfc-0165-sfc-Update-MCDI-protocol-definitions.patch
 
 	########################################################
 	# Wireless Networking
