--- a/series.conf
+++ b/series.conf
@@ -16164,6 +16164,7 @@
 	patches.drivers/sfc-0235-sfc-Adding-PCI-ID-for-Solarflare-7000-series-40G-net.patch
 	patches.drivers/sfc-0236-sfc-Add-40G-link-capability-decoding.patch
 	patches.drivers/sfc-0237-sfc-add-extra-RX-drop-counters-for-nodesc_trunc-and-.patch
+	patches.drivers/sfc-0238-sfc-Add-per-queue-statistics-in-ethtool.patch
 
 	########################################################
 	# Wireless Networking
