sfc: Remove rx_alloc_method SKB (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15932,6 +15932,7 @@
 	patches.drivers/sfc-0003-sfc-Allow-efx_channel_type-receive_skb-to-reject-a-p.patch
 	patches.drivers/sfc-0004-sfc-PTP-changes-to-support-improved-UUID-filtering-m.patch
 	patches.drivers/sfc-0005-sfc-tidy-up-PTP-synchronize-function-efx_ptp_process.patch
+	patches.drivers/sfc-0006-sfc-Remove-rx_alloc_method-SKB.patch
 
 	########################################################
 	# Wireless Networking
