--- a/series.conf
+++ b/series.conf
@@ -16156,6 +16156,7 @@
 	patches.drivers/sfc-0227-sfc-check-for-NULL-efx-ptp_data-in-efx_ptp_event.patch
 	patches.drivers/sfc-0228-sfc-Use-ether_addr_copy-and-eth_broadcast_addr.patch
 	patches.drivers/sfc-0229-sfc-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/sfc-0230-Call-efx_set_channels-before-efx-type-dimension_reso.patch
 
 	########################################################
 	# Wireless Networking
