sfc: Rename SPI stuff to show that it is Falcon-specific (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16017,6 +16017,7 @@
 	patches.drivers/sfc-0088-sfc-Add-flag-for-stack-owned-RX-MAC-filters.patch
 	patches.drivers/sfc-0089-sfc-Define-and-use-MCDI_POPULATE_DWORD_-1-2-3-4-5-6-.patch
 	patches.drivers/sfc-0090-sfc-Cleanup-Falcon-arch-simple-MAC-filter-state.patch
+	patches.drivers/sfc-0091-sfc-Rename-SPI-stuff-to-show-that-it-is-Falcon-speci.patch
 
 	########################################################
 	# Wireless Networking
