sfc: remove duplicated include from efx.c (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15952,6 +15952,7 @@
 	patches.drivers/sfc-0023-sfc-reuse-pages-to-avoid-DMA-mapping-unmapping-costs.patch
 	patches.drivers/sfc-0024-sfc-Replace-efx_rx_is_last_buffer-with-a-flag.patch
 	patches.drivers/sfc-0025-sfc-allocate-more-RX-buffers-per-page.patch
+	patches.drivers/sfc-0026-sfc-remove-duplicated-include-from-efx.c.patch
 
 	########################################################
 	# Wireless Networking
