sfc: Rework IRQ enable/disable (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15992,6 +15992,7 @@
 	patches.drivers/sfc-0063-sfc-Make-struct-efx_special_buffer-less-special.patch
 	patches.drivers/sfc-0064-sfc-Rename-Falcon-architecture-register-definitions.patch
 	patches.drivers/sfc-0065-sfc-Remove-efx_process_channel_now.patch
+	patches.drivers/sfc-0066-sfc-Rework-IRQ-enable-disable.patch
 
 	########################################################
 	# Wireless Networking
