sfc: Return an error code when a sensor is busy (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16032,6 +16032,7 @@
 	patches.drivers/sfc-0103-sfc-Rename-EFX_PAGE_BLOCK_SIZE-to-EFX_VI_PAGE_SIZE-a.patch
 	patches.drivers/sfc-0104-sfc-Generalise-packet-hash-lookup-to-support-EF10-RX.patch
 	patches.drivers/sfc-0105-sfc-Add-support-for-reading-packet-length-from-prefi.patch
+	patches.drivers/sfc-0106-sfc-Return-an-error-code-when-a-sensor-is-busy.patch
 
 	########################################################
 	# Wireless Networking
