sfc: Update copyright banners (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16051,6 +16051,7 @@
 	patches.drivers/sfc-0122-sfc-Rename-implementation-of-ndo_set_rx_mode.patch
 	patches.fixes/etherdevice-introduce-eth_broadcast_addr.patch
 	patches.drivers/sfc-0124-sfc-Add-support-for-Solarflare-SFC9100-family.patch
+	patches.drivers/sfc-0125-sfc-Update-copyright-banners.patch
 
 	########################################################
 	# Wireless Networking
