sfc: Add EF10 registers to register dump (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16063,6 +16063,7 @@
 	patches.drivers/sfc-0134-sfc-Increase-MCDI-status-timeout-to-250ms.patch
 	patches.drivers/sfc-0135-sfc-efx_ethtool_get_ts_info-can-be-static.patch
 	patches.drivers/sfc-0136-sfc-efx_ef10_filter_update_rx_scatter-can-be-static.patch
+	patches.drivers/sfc-0137-sfc-Add-EF10-registers-to-register-dump.patch
 
 	########################################################
 	# Wireless Networking
