sfc: Map MCDI error MC_CMD_ERR_ENOTSUP to Linux EOPNOTSUPP (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16101,6 +16101,7 @@
 	patches.drivers/sfc-0172-sfc-Revise-sensor-names-to-be-more-understandable-an.patch
 	patches.drivers/sfc-0173-sfc-Add-new-sensor-names.patch
 	patches.drivers/sfc-0174-sfc-Log-all-unexpected-MCDI-errors.patch
+	patches.drivers/sfc-0175-sfc-Map-MCDI-error-MC_CMD_ERR_ENOTSUP-to-Linux-EOPNO.patch
 
 	########################################################
 	# Wireless Networking
