sfc: Fail self-test with -EBUSY, not -EIO, if the device is busy (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16150,6 +16150,7 @@
 	patches.drivers/sfc-0221-sfc-Use-canonical-pointer-type-for-MAC-address-in-ef.patch
 	patches.drivers/sfc-0222-sfc-Update-product-naming.patch
 	patches.drivers/sfc-0223-sfc-Cosmetic-changes-to-self-test-from-the-out-of-tr.patch
+	patches.drivers/sfc-0224-sfc-Fail-self-test-with-EBUSY-not-EIO-if-the-device-.patch
 
 	########################################################
 	# Wireless Networking
