net: introduce skb_transport_header_was_set() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16081,6 +16081,7 @@
 	patches.drivers/sfc-0152-sfc-Only-bind-to-EF10-functions-with-the-LinkCtrl-an.patch
 	patches.drivers/sfc-0153-sfc-Fix-DMA-unmapping-issue-with-firmware-assisted-T.patch
 	patches.drivers/sfc-0154-sfc-Implement-the-SIOCGHWTSTAMP-ioctl.patch
+	patches.fixes/net-introduce-skb_transport_header_was_set.patch
 
 	########################################################
 	# Wireless Networking
