sfc: Tighten the check for RX merged completion events (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16094,6 +16094,7 @@
 	patches.drivers/sfc-0165-sfc-Update-MCDI-protocol-definitions.patch
 	patches.drivers/sfc-0166-net-sfc-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/sfc-0167-sfc-Add-MC-BISTs-to-ethtool-offline-self-test-on-EF1.patch
+	patches.drivers/sfc-0168-sfc-Tighten-the-check-for-RX-merged-completion-event.patch
 
 	########################################################
 	# Wireless Networking
