sfc: Do not pass non-TCP packets into GRO code (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15967,6 +15967,7 @@
 	patches.drivers/sfc-0038-sfc-Report-software-timestamping-capabilities.patch
 	patches.drivers/sfc-0039-sfc-Enable-accelerated-RFS-on-vlans.patch
 	patches.drivers/sfc-0040-sfc-Define-and-set-RX-buffer-flag-for-packets-parsed.patch
+	patches.drivers/sfc-0041-sfc-Do-not-pass-non-TCP-packets-into-GRO-code.patch
 
 	########################################################
 	# Wireless Networking
