sfc: Enable accelerated RFS on vlans (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15965,6 +15965,7 @@
 	patches.drivers/sfc-0036-sfc-Enable-RX-checksum-offload-for-packets-not-handl.patch
 	patches.drivers/sfc-0037-sfc-Increase-size-of-RX-SKB-header-area.patch
 	patches.drivers/sfc-0038-sfc-Report-software-timestamping-capabilities.patch
+	patches.drivers/sfc-0039-sfc-Enable-accelerated-RFS-on-vlans.patch
 
 	########################################################
 	# Wireless Networking
