--- a/series.conf
+++ b/series.conf
@@ -15977,6 +15977,7 @@
 	patches.drivers/sfc-0048-sfc-Move-details-of-a-Falcon-bug-workaround-out-of-e.patch
 	patches.drivers/sfc-0049-sfc-Move-more-Falcon-specific-code-and-definitions-i.patch
 	patches.drivers/sfc-0050-sfc-Introduce-and-use-MCDI_DECLARE_BUF-macro.patch
+	patches.drivers/sfc-0051-sfc-Rationalise-MCDI-buffer-accessors.patch
 
 	########################################################
 	# Wireless Networking
