sfc: Use __iowrite64_copy instead of a slightly different local function (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16165,6 +16165,7 @@
 	patches.drivers/sfc-0236-sfc-Add-40G-link-capability-decoding.patch
 	patches.drivers/sfc-0237-sfc-add-extra-RX-drop-counters-for-nodesc_trunc-and-.patch
 	patches.drivers/sfc-0238-sfc-Add-per-queue-statistics-in-ethtool.patch
+	patches.drivers/sfc-0239-sfc-Use-__iowrite64_copy-instead-of-a-slightly-diffe.patch
 
 	########################################################
 	# Wireless Networking
