vmcore: introduce ELF header in new memory feature (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -19211,6 +19211,8 @@
 	patches.suse/vmcore-allow-userspace-remap-ELF-note-segment-buffer
 	patches.suse/vmcore-unify-vmcore-file-size-calculation
 	patches.suse/vmcore-support-mmap-on-proc-vmcore
+	# s390x part
+	patches.suse/vmcore-introduce-ELF-header-in-new-memory-feature
 
 	########################################################
 	# Audit
