s390/vmcore: use ELF header in new memory feature (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -19213,6 +19213,7 @@
 	patches.suse/vmcore-support-mmap-on-proc-vmcore
 	# s390x part
 	patches.suse/vmcore-introduce-ELF-header-in-new-memory-feature
+	patches.arch/s390-vmcore-use-ELF-header-in-new-memory-feature
 
 	########################################################
 	# Audit
