vmcore: introduce remap_oldmem_pfn_range() (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -19214,6 +19214,7 @@
 	# s390x part
 	patches.suse/vmcore-introduce-ELF-header-in-new-memory-feature
 	patches.arch/s390-vmcore-use-ELF-header-in-new-memory-feature
+	patches.suse/vmcore-introduce-remap_oldmem_pfn_range
 
 	########################################################
 	# Audit
