s390/vmcore: implement remap_oldmem_pfn_range for s390 (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -19215,6 +19215,7 @@
 	patches.suse/vmcore-introduce-ELF-header-in-new-memory-feature
 	patches.arch/s390-vmcore-use-ELF-header-in-new-memory-feature
 	patches.suse/vmcore-introduce-remap_oldmem_pfn_range
+	patches.arch/s390-vmcore-implement-remap_oldmem_pfn_range
 
 	########################################################
 	# Audit
