ipvs: IPv6 MTU checking cleanup and bugfix (bnc#861980 bnc#907611).

--- a/series.conf
+++ b/series.conf
@@ -5382,6 +5382,7 @@
 	# IPv6 fragment handling in nf_conntrack (bnc#861980, bnc#907611 and others)
 	patches.fixes/ipv6-Add-fragment-reporting-to-ipv6_skip_exthdr.patch
 	patches.fixes/ipv4-fix-path-MTU-discovery-with-connection-tracking.patch
+	patches.fixes/ipvs-IPv6-MTU-checking-cleanup-and-bugfix.patch
 
 	########################################################
 	# PCI and PCI hotplug
