--- a/series.conf
+++ b/series.conf
@@ -5384,6 +5384,7 @@
 	patches.fixes/ipv4-fix-path-MTU-discovery-with-connection-tracking.patch
 	patches.fixes/ipvs-IPv6-MTU-checking-cleanup-and-bugfix.patch
 	patches.fixes/netfilter-nf_conntrack_ipv6-improve-fragmentation-ha.patch
+	patches.fixes/netfilter-nf_conntrack_ipv6-fix-tracking-of-ICMPv6-e.patch
 
 	########################################################
 	# PCI and PCI hotplug
