--- a/series.conf
+++ b/series.conf
@@ -5379,6 +5379,9 @@
 	patches.fixes/netfilter-nfnetlink_queue-add-net-namespace-support-.patch
 	patches.fixes/netfilter-conntrack-disable-generic-tracking-for-known-protos.patch
 
+	# IPv6 fragment handling in nf_conntrack (bnc#861980, bnc#907611 and others)
+	patches.fixes/ipv6-Add-fragment-reporting-to-ipv6_skip_exthdr.patch
+
 	########################################################
 	# PCI and PCI hotplug
 	########################################################
