ipv4: fix path MTU discovery with connection tracking (bnc#861980 bnc#907611).

--- a/series.conf
+++ b/series.conf
@@ -5381,6 +5381,7 @@
 
 	# IPv6 fragment handling in nf_conntrack (bnc#861980, bnc#907611 and others)
 	patches.fixes/ipv6-Add-fragment-reporting-to-ipv6_skip_exthdr.patch
+	patches.fixes/ipv4-fix-path-MTU-discovery-with-connection-tracking.patch
 
 	########################################################
 	# PCI and PCI hotplug
