netfilter: nf_conntrack_ipv6: improve fragmentation handling (bnc#861980 bnc#907611).

--- a/series.conf
+++ b/series.conf
@@ -5383,6 +5383,7 @@
 	patches.fixes/ipv6-Add-fragment-reporting-to-ipv6_skip_exthdr.patch
 	patches.fixes/ipv4-fix-path-MTU-discovery-with-connection-tracking.patch
 	patches.fixes/ipvs-IPv6-MTU-checking-cleanup-and-bugfix.patch
+	patches.fixes/netfilter-nf_conntrack_ipv6-improve-fragmentation-ha.patch
 
 	########################################################
 	# PCI and PCI hotplug
