ipvs: SIP fragment handling (bnc#861980 bnc#907611).

--- a/series.conf
+++ b/series.conf
@@ -5385,6 +5385,7 @@
 	patches.fixes/ipvs-IPv6-MTU-checking-cleanup-and-bugfix.patch
 	patches.fixes/netfilter-nf_conntrack_ipv6-improve-fragmentation-ha.patch
 	patches.fixes/netfilter-nf_conntrack_ipv6-fix-tracking-of-ICMPv6-e.patch
+	patches.fixes/ipvs-SIP-fragment-handling.patch
 
 	########################################################
 	# PCI and PCI hotplug
