ip6_output: fragment outgoing reassembled skb properly (bnc#861980 bnc#907611).

--- a/series.conf
+++ b/series.conf
@@ -5386,6 +5386,7 @@
 	patches.fixes/netfilter-nf_conntrack_ipv6-improve-fragmentation-ha.patch
 	patches.fixes/netfilter-nf_conntrack_ipv6-fix-tracking-of-ICMPv6-e.patch
 	patches.fixes/ipvs-SIP-fragment-handling.patch
+	patches.fixes/ip6_output-fragment-outgoing-reassembled-skb-properl.patch
 
 	########################################################
 	# PCI and PCI hotplug
