net: sched: shrink struct qdisc_skb_cb to 28 bytes (bnc#919482).

--- a/series.conf
+++ b/series.conf
@@ -13655,6 +13655,8 @@
 	patches.fixes/ipoib-use-a-private-hash-table-for-path-lookup-in-xm.patch
 	patches.fixes/net-fix-neighbours-after-mac-change.patch
 
+	patches.fixes/ipoib-0001-net-sched-shrink-struct-qdisc_skb_cb-to-28-bytes.patch
+
 	# e1000 SP4 update (bnc#909498 FATE#317395)
 	patches.drivers/e1000-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/e1000-0002-drivers-net-Remove-remaining-alloc-OOM-messages.patch
