--- a/series.conf
+++ b/series.conf
@@ -16004,6 +16004,7 @@
 	patches.drivers/mlx5-0076-IB-mlx5-Remove-MTT-access-mode-from-umr-flags-helper.patch
 	patches.drivers/mlx5-0077-IB-mlx5-Keep-mlx5-MRs-in-a-radix-tree-under-device.patch
 	patches.drivers/mlx5-0078-IB-mlx5-Support-IB_WR_REG_SIG_MR.patch
+	patches.drivers/mlx5-0079-IB-mlx5-Collect-signature-error-completion.patch
 
 	########################################################
 	# Wireless Networking
