--- a/series.conf
+++ b/series.conf
@@ -16054,6 +16054,7 @@
 	patches.drivers/mlx5-0126-mlx5-avoid-build-warnings-on-32-bit.patch
 	patches.drivers/mlx5-0127-infiniband-mlx5-avoid-a-compile-time-warning.patch
 	patches.drivers/mlx5-0128-net-mlx5_core-Move-to-use-hex-PCI-device-IDs.patch
+	patches.drivers/mlx5-0129-net-Mellanox-Delete-unnecessary-checks-before-the-fu.patch
 
 	########################################################
 	# Wireless Networking
