--- a/series.conf
+++ b/series.conf
@@ -15945,6 +15945,7 @@
 	patches.drivers/mlx5-0017-mlx5-remove-unused-MLX5_DEBUG-param-in-Kconfig.patch
 	patches.drivers/mlx5-0018-IB-mlx5-Fix-send-work-queue-size-calculation.patch
 	patches.drivers/mlx5-0019-IB-mlx5-Flush-cache-workqueue-before-destroying-it.patch
+	patches.drivers/mlx5-0020-IB-mlx5-Fix-memory-leak-in-mlx5_ib_create_srq.patch
 
 	########################################################
 	# Wireless Networking
