mlx5: Fix error code translation from firmware to driver (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15954,6 +15954,7 @@
 	patches.drivers/mlx5-0026-IB-mlx5-Disable-atomic-operations.patch
 	patches.drivers/mlx5-0027-mlx5-Fix-opt-param-mask-for-sq-err-to-rts-transition.patch
 	patches.drivers/mlx5-0028-IB-mlx5-Fix-opt-param-mask-according-to-firmware-spe.patch
+	patches.drivers/mlx5-0029-mlx5-Fix-error-code-translation-from-firmware-to-dri.patch
 
 	########################################################
 	# Wireless Networking
