mlx5_core: Fix PowerPC support (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15984,6 +15984,7 @@
 	patches.drivers/mlx5-0056-IB-mlx5-Implement-modify-CQ.patch
 	patches.drivers/mlx5-0057-IB-mlx5-Add-support-for-resize-CQ.patch
 	patches.drivers/mlx5-0058-mlx5_core-Improve-debugfs-readability.patch
+	patches.drivers/mlx5-0059-mlx5_core-Fix-PowerPC-support.patch
 
 	########################################################
 	# Wireless Networking
