IB/mlx5: Update opt param mask for RTS2RTS (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15969,6 +15969,7 @@
 	patches.drivers/mlx5-0041-mlx5_core-Change-optimal_reclaimed_pages-for-better-.patch
 	patches.drivers/mlx5-0042-IB-mlx5-Remove-dead-code-in-mr.c.patch
 	patches.drivers/mlx5-0043-IB-mlx5-Remove-Always-false-comparison.patch
+	patches.drivers/mlx5-0044-IB-mlx5-Update-opt-param-mask-for-RTS2RTS.patch
 
 	########################################################
 	# Wireless Networking
