IB/mlx5: Remove old field for create mkey mailbox (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15987,6 +15987,7 @@
 	patches.drivers/mlx5-0059-mlx5_core-Fix-PowerPC-support.patch
 	patches.drivers/mlx5-0060-IB-mlx5-Allow-creation-of-QPs-with-zero-length-work-.patch
 	patches.drivers/mlx5-0061-IB-mlx5-Abort-driver-cleanup-if-teardown-hca-fails.patch
+	patches.drivers/mlx5-0062-IB-mlx5-Remove-old-field-for-create-mkey-mailbox.patch
 
 	########################################################
 	# Wireless Networking
