--- a/series.conf
+++ b/series.conf
@@ -15995,6 +15995,7 @@
 	patches.drivers/mlx5-0067-mlx5-Add-include-of-linux-slab.h-because-of-kzalloc-.patch
 	patches.drivers/mlx5-0068-IB-mlx5-Remove-dependency-on-X86.patch
 	patches.drivers/mlx5-0069-mlx5-Use-pci_enable_msix_range-instead-of-pci_enable.patch
+	patches.drivers/mlx5-0070-net-IB-mlx-Bump-all-Mellanox-driver-versions.patch
 
 	########################################################
 	# Wireless Networking
