--- a/series.conf
+++ b/series.conf
@@ -15947,6 +15947,7 @@
 	patches.drivers/mlx5-0019-IB-mlx5-Flush-cache-workqueue-before-destroying-it.patch
 	patches.drivers/mlx5-0020-IB-mlx5-Fix-memory-leak-in-mlx5_ib_create_srq.patch
 	patches.drivers/mlx5-0021-mlx5-Remove-checksum-on-command-interface-commands.patch
+	patches.drivers/mlx5-0022-IB-mlx5-Decrease-memory-consumption-of-mr-caches.patch
 
 	########################################################
 	# Wireless Networking
