--- a/series.conf
+++ b/series.conf
@@ -15971,6 +15971,7 @@
 	patches.drivers/mlx5-0043-IB-mlx5-Remove-Always-false-comparison.patch
 	patches.drivers/mlx5-0044-IB-mlx5-Update-opt-param-mask-for-RTS2RTS.patch
 	patches.drivers/mlx5-0045-mlx5-Use-enum-to-indicate-adapter-page-size.patch
+	patches.drivers/mlx5-0046-IB-mlx5-Remove-dead-code.patch
 
 	########################################################
 	# Wireless Networking
