IB/mlx5: Simplify mlx5_ib_destroy_srq (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15961,6 +15961,7 @@
 	patches.drivers/mlx5-0033-IB-mlx5-Fix-check-of-number-of-entries-in-create-CQ.patch
 	patches.drivers/mlx5-0034-IB-mlx5-Multithreaded-create-MR.patch
 	patches.drivers/mlx5-0035-IB-mlx5-Fix-overflow-check-in-IB_WR_FAST_REG_MR.patch
+	patches.drivers/mlx5-0036-IB-mlx5-Simplify-mlx5_ib_destroy_srq.patch
 
 	########################################################
 	# Wireless Networking
