net/mlx5_core: Use hardware registers description header file (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16026,6 +16026,7 @@
 	patches.drivers/mlx5-0098-mlx5-Adjust-events-to-use-unsigned-long-param-instea.patch
 	patches.drivers/mlx5-0099-IB-mlx5-Use-ARRAY_SIZE-instead-of-sizeof-sizeof-0.patch
 	patches.drivers/mlx5-0100-net-mlx5_core-Update-device-capabilities-handling.patch
+	patches.drivers/mlx5-0101-net-mlx5_core-Use-hardware-registers-description-hea.patch
 
 	########################################################
 	# Wireless Networking
