--- a/series.conf
+++ b/series.conf
@@ -16002,6 +16002,7 @@
 	patches.drivers/mlx5-0074-IB-mlx5-Initialize-mlx5_ib_qp-signature-related-memb.patch
 	patches.drivers/mlx5-0075-IB-mlx5-Break-up-wqe-handling-into-begin-finish-rout.patch
 	patches.drivers/mlx5-0076-IB-mlx5-Remove-MTT-access-mode-from-umr-flags-helper.patch
+	patches.drivers/mlx5-0077-IB-mlx5-Keep-mlx5-MRs-in-a-radix-tree-under-device.patch
 
 	########################################################
 	# Wireless Networking
