mlx5: Fix error flow in add_keys (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16048,6 +16048,7 @@
 	patches.drivers/mlx5-0120-net-mlx5_core-Clear-outbox-of-dealloc-uar.patch
 	patches.drivers/mlx5-0121-net-mlx5_core-Add-more-supported-devices.patch
 	patches.drivers/mlx5-0122-mlx5-Fix-sparse-warnings.patch
+	patches.drivers/mlx5-0123-mlx5-Fix-error-flow-in-add_keys.patch
 
 	########################################################
 	# Wireless Networking
