--- a/series.conf
+++ b/series.conf
@@ -16035,6 +16035,7 @@
 	patches.drivers/mlx5-0107-IB-mlx5-Fix-possible-array-overflow.patch
 	patches.drivers/mlx5-0108-IB-mlx5-Remove-duplicate-code-from-mlx5_set_path.patch
 	patches.drivers/mlx5-0109-IB-mlx5-Modify-to-work-with-arbitrary-page-size.patch
+	patches.drivers/mlx5-0110-IB-mlx5-Use-enumerations-for-PI-copy-mask.patch
 
 	########################################################
 	# Wireless Networking
