--- a/series.conf
+++ b/series.conf
@@ -15934,6 +15934,7 @@
 	patches.drivers/mlx5-0006-mlx5_core-Fixes-for-sparse-warnings.patch
 	patches.drivers/mlx5-0007-mlx5_core-Adjust-hca_cap.uar_page_sz-to-conform-to-C.patch
 	patches.drivers/mlx5-0008-mlx5-Return-EFAULT-instead-of-EPERM.patch
+	patches.drivers/mlx5-0009-mlx5-core-Fix-__udivdi3-when-compiling-for-32-bit-ar.patch
 
 	########################################################
 	# Wireless Networking
