--- a/series.conf
+++ b/series.conf
@@ -15974,6 +15974,7 @@
 	patches.drivers/mlx5-0046-IB-mlx5-Remove-dead-code.patch
 	patches.drivers/mlx5-0047-IB-mlx5-Fix-list_del-of-empty-list.patch
 	patches.drivers/mlx5-0048-IB-mlx5-Fix-page-shift-in-create-CQ-for-userspace.patch
+	patches.drivers/mlx5-0049-IB-mlx5-Remove-unused-code-in-mr.c.patch
 
 	########################################################
 	# Wireless Networking
