--- a/series.conf
+++ b/series.conf
@@ -15982,6 +15982,7 @@
 	patches.drivers/mlx5-0054-mlx5_core-Use-mlx5-core-style-warning.patch
 	patches.drivers/mlx5-0055-IB-mlx5-Make-sure-doorbell-record-is-visible-before-.patch
 	patches.drivers/mlx5-0056-IB-mlx5-Implement-modify-CQ.patch
+	patches.drivers/mlx5-0057-IB-mlx5-Add-support-for-resize-CQ.patch
 
 	########################################################
 	# Wireless Networking
