IB/mlx5: Implement modify CQ (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15981,6 +15981,7 @@
 	patches.drivers/mlx5-0053-IB-mlx5-Clear-out-struct-before-create-QP-command.patch
 	patches.drivers/mlx5-0054-mlx5_core-Use-mlx5-core-style-warning.patch
 	patches.drivers/mlx5-0055-IB-mlx5-Make-sure-doorbell-record-is-visible-before-.patch
+	patches.drivers/mlx5-0056-IB-mlx5-Implement-modify-CQ.patch
 
 	########################################################
 	# Wireless Networking
