--- a/series.conf
+++ b/series.conf
@@ -15962,6 +15962,7 @@
 	patches.drivers/mlx5-0034-IB-mlx5-Multithreaded-create-MR.patch
 	patches.drivers/mlx5-0035-IB-mlx5-Fix-overflow-check-in-IB_WR_FAST_REG_MR.patch
 	patches.drivers/mlx5-0036-IB-mlx5-Simplify-mlx5_ib_destroy_srq.patch
+	patches.drivers/mlx5-0037-IB-mlx5-Fix-srq-free-in-destroy-qp.patch
 
 	########################################################
 	# Wireless Networking
