mlx5: Add driver for Mellanox Connect-IB adapters (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15928,6 +15928,7 @@
 
 	patches.drivers/mlx5-0001-IB-core-Add-reserved-values-to-enums-for-low-level-d.patch
 	patches.drivers/mlx5-0002-module.h-split-out-the-EXPORT_SYMBOL-into-export.h.patch
+	patches.drivers/mlx5-0003-mlx5-Add-driver-for-Mellanox-Connect-IB-adapters.patch
 
 	########################################################
 	# Wireless Networking
