--- a/series.conf
+++ b/series.conf
@@ -16023,6 +16023,7 @@
 	patches.drivers/mlx5-0095-IB-mlx5-Enable-block-multicast-loopback-for-kernel-c.patch
 	patches.drivers/mlx5-0096-mlx5-Move-pci-device-handling-from-mlx5_ib-to-mlx5_c.patch
 	patches.drivers/mlx5-0097-mlx5-minor-fixes-mainly-avoidance-of-hidden-casts.patch
+	patches.drivers/mlx5-0098-mlx5-Adjust-events-to-use-unsigned-long-param-instea.patch
 
 	########################################################
 	# Wireless Networking
