IB/mlx5: Fix overflow check in IB_WR_FAST_REG_MR (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15960,6 +15960,7 @@
 	patches.drivers/mlx5-0032-IB-mlx5-Ensure-proper-synchronization-accessing-memo.patch
 	patches.drivers/mlx5-0033-IB-mlx5-Fix-check-of-number-of-entries-in-create-CQ.patch
 	patches.drivers/mlx5-0034-IB-mlx5-Multithreaded-create-MR.patch
+	patches.drivers/mlx5-0035-IB-mlx5-Fix-overflow-check-in-IB_WR_FAST_REG_MR.patch
 
 	########################################################
 	# Wireless Networking
