--- a/series.conf
+++ b/series.conf
@@ -15951,6 +15951,7 @@
 	patches.drivers/mlx5-0023-IB-mlx5-Avoid-async-events-on-invalid-port-number.patch
 	patches.drivers/mlx5-0024-mlx5-Keep-polling-to-reclaim-pages-while-any-returne.patch
 	patches.drivers/mlx5-0025-mlx5-Fix-layout-of-struct-mlx5_init_seg.patch
+	patches.drivers/mlx5-0026-IB-mlx5-Disable-atomic-operations.patch
 
 	########################################################
 	# Wireless Networking
