--- a/series.conf
+++ b/series.conf
@@ -16034,6 +16034,7 @@
 	patches.drivers/mlx5-0106-IB-mlx5-Improve-debug-prints-in-mlx5_ib_reg_user_mr.patch
 	patches.drivers/mlx5-0107-IB-mlx5-Fix-possible-array-overflow.patch
 	patches.drivers/mlx5-0108-IB-mlx5-Remove-duplicate-code-from-mlx5_set_path.patch
+	patches.drivers/mlx5-0109-IB-mlx5-Modify-to-work-with-arbitrary-page-size.patch
 
 	########################################################
 	# Wireless Networking
