module.h: split out the EXPORT_SYMBOL into export.h (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15927,6 +15927,7 @@
 	patches.drivers/i40evf-0144-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 
 	patches.drivers/mlx5-0001-IB-core-Add-reserved-values-to-enums-for-low-level-d.patch
+	patches.drivers/mlx5-0002-module.h-split-out-the-EXPORT_SYMBOL-into-export.h.patch
 
 	########################################################
 	# Wireless Networking
