--- a/series.conf
+++ b/series.conf
@@ -16029,6 +16029,7 @@
 	patches.drivers/mlx5-0101-net-mlx5_core-Use-hardware-registers-description-hea.patch
 	patches.drivers/mlx5-0102-net-mlx5_core-use-set-get-macros-in-device-caps.patch
 	patches.drivers/mlx5-0103-net-mlx5_core-Identify-resources-by-their-type.patch
+	patches.drivers/mlx5-0104-net-mlx5_core-Add-ConnectX-4-to-list-of-supported-de.patch
 
 	########################################################
 	# Wireless Networking
