net/mlx5_core: Move to use hex PCI device IDs (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -16053,6 +16053,7 @@
 	patches.drivers/mlx5-0125-mlx5_core-Re-add-MLX5_DEV_CAP_FLAG_ON_DMND_PG-flag.patch
 	patches.drivers/mlx5-0126-mlx5-avoid-build-warnings-on-32-bit.patch
 	patches.drivers/mlx5-0127-infiniband-mlx5-avoid-a-compile-time-warning.patch
+	patches.drivers/mlx5-0128-net-mlx5_core-Move-to-use-hex-PCI-device-IDs.patch
 
 	########################################################
 	# Wireless Networking
