--- a/series.conf
+++ b/series.conf
@@ -16012,6 +16012,7 @@
 	patches.drivers/mlx5-0084-mlx5_core-Simplify-signature-handover-wqe-for-interl.patch
 	patches.drivers/mlx5-0085-mlx5_core-Copy-DIF-fields-only-when-input-and-output.patch
 	patches.drivers/mlx5-0086-IB-mlx5-Fix-error-handling-in-reg_umr.patch
+	patches.drivers/mlx5-0087-IB-mlx5-Add-MR-to-radix-tree-in-reg_mr_callback.patch
 
 	########################################################
 	# Wireless Networking
