IB/mlx5: Fix list_del of empty list (bnc#905015 fate#317531).

--- a/series.conf
+++ b/series.conf
@@ -15972,6 +15972,7 @@
 	patches.drivers/mlx5-0044-IB-mlx5-Update-opt-param-mask-for-RTS2RTS.patch
 	patches.drivers/mlx5-0045-mlx5-Use-enum-to-indicate-adapter-page-size.patch
 	patches.drivers/mlx5-0046-IB-mlx5-Remove-dead-code.patch
+	patches.drivers/mlx5-0047-IB-mlx5-Fix-list_del-of-empty-list.patch
 
 	########################################################
 	# Wireless Networking
